test/parallel/forall/checks/with-bool.chpl
// Ensure the compiler produces a graceful error.

forall Locales with (in bool) {
  writeln();
}
